src/objects/Evaluation_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Excess__c</fullName>
        <formula>IF( (End_Date__c -  Start_Date__c) &gt; 30,
   2500,
   500)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicable Excess</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Confirmation_Sent_Date__c</fullName>
        <label>Booking Confirmation Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Confirmation_Status__c</fullName>
        <label>Booking Confirmation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_Confirmation_to_be_sent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Booking Confirmation to be sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Creator_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <label>Booking Creator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Duration__c</fullName>
        <description>Field use for reporting</description>
        <formula>End_Date__c -  Start_Date__c+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_reason__c</fullName>
        <label>Cancellation reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <formula>TEXT(Evaluation_Vehicle__r.Colour__c)</formula>
        <label>Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please enter a Contact with a valid email</errorMessage>
            <filterItems>
                <field>Contact.Email</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluation Bookings</relationshipLabel>
        <relationshipName>Evaluation_Bookings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Email__c</fullName>
        <formula>IF(OR(ISNULL(Nissan_Representative__r.Email),ISBLANK(Nissan_Representative__r.Email)),
   &apos;&apos;,
   Nissan_Representative__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <formula>IF(OR(ISNULL(Nissan_Representative__r.FirstName),ISBLANK(Nissan_Representative__r.FirstName)),
   Nissan_Representative__r.LastName, 
   Nissan_Representative__r.FirstName+&apos; &apos;+Nissan_Representative__r.LastName)</formula>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Phone__c</fullName>
        <formula>IF(NOT(ISBLANK(Nissan_Representative__r.MobilePhone)),
   Nissan_Representative__r.MobilePhone,
   Nissan_Representative__r.Phone)</formula>
        <label>Created By Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive__c</fullName>
        <formula>TEXT(Evaluation_Vehicle__r.Drive__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Vehicle__c</fullName>
        <label>Evaluation Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an Evaluation vehicle with Live status</errorMessage>
            <filterItems>
                <field>Evaluation_Vehicle__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Grounded</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Evaluation_Vehicle__c</referenceTo>
        <relationshipLabel>Evaluation Bookings</relationshipLabel>
        <relationshipName>Evaluation_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <formula>TEXT(Evaluation_Vehicle__r.Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Confirmed_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Confirmed Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>Model__c+&quot; - &quot;+ Evaluation_Vehicle__r.Vehicle__r.Name</formula>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Evaluation_Vehicle__r.Model__c</formula>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nissan_Representative_Email__c</fullName>
        <formula>Nissan_Representative__r.Email</formula>
        <label>Nissan Representative Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nissan_Representative_First_Name__c</fullName>
        <formula>Nissan_Representative__r.FirstName</formula>
        <label>Nissan Representative First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nissan_Representative_Mobile__c</fullName>
        <formula>Nissan_Representative__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nissan Representative Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nissan_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nissan Representative</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a Nissan Representative with an email and Mobile/Phone number</errorMessage>
            <filterItems>
                <field>Contact.Email</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.has_Phone_or_Mobile__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluation Bookings (Nissan Representative)</relationshipLabel>
        <relationshipName>Evaluation_Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Organisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Evaluation_Vehicle__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rego__c</fullName>
        <formula>Evaluation_Vehicle__r.Vehicle_Registration__c</formula>
        <label>Rego</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Evaluation_Vehicle__r.Status__c )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Indemnity_Form__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>The indemnity form will be sent 2 working days prior to the booking start date</inlineHelpText>
        <label>Submit Indemnity Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Confirmation_Sent_Date__c</fullName>
        <label>Survey Confirmation Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Confirmation_Status__c</fullName>
        <label>Survey Confirmation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Form_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Form Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_to_be_Sent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Survey to be Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trans__c</fullName>
        <formula>Evaluation_Vehicle__r.Trans__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Name__c</fullName>
        <formula>Evaluation_Vehicle__r.Vehicle__r.Name</formula>
        <label>Vehicle Name</label>
        <type>Text</type>
    </fields>
    <label>Evaluation Booking</label>
    <listViews>
        <fullName>All_Bookings</fullName>
        <columns>NAME</columns>
        <columns>Evaluation_Vehicle__c</columns>
        <columns>Organisation__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Bookings</label>
    </listViews>
    <nameField>
        <displayFormat>EB-{0000}</displayFormat>
        <label>Evaluation Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>